# cookiecutter-rrpyapplication

./: .gitignore  README.rst  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  one-file.spec  one-folder.spec  pyproject.toml  requirements.txt  requirements_py39.txt  setup.cfg  setup.py  tasks.py  tox.ini
{{cookiecutter.project_slug}}/requirements/: py36.txt  py37.txt  py39.txt
{{cookiecutter.project_slug}}/scripts/: hook-PyQt5.QtWidgets.py  hook-sys.py  run.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: main_window.py  setting.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/controller/: sample.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/model/: sample.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/models/: calculator_model.py  counter_model.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/presenters/: calculator_presenter.py  counter_presenter.py  main_presenter.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/utils/: core.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/view/: sample.py  sample.ui
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/tests/models/: test_calculator.py  test_counter.py
{{cookiecutter.project_slug}}/tests/presenters/: test_calculator_presenter.py  test_counter_presenter.py
(+9 files in other folders)
